# polimi-scraper

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak
notebooks/: 1a-tomaz-suller-maps-selenium.ipynb  1b-tomaz-suller-maps-api.ipynb  1c-tomaz-suller-id-aula.ipynb  1d-tomaz-suller-occupazione.ipynb  2a-tomaz-suller-process-classrooms.ipynb  3-tomaz-suller-model.ipynb
src/polimi_scraper/: __init__.py  config.py  utils.py
src/polimi_scraper/scrape/: polimaps.py
