[project]
name = "polimi-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tomaz-suller", email = "tomaz.suller@usp.br" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "mip>=1.15.0",
    "numpy>=2.2.2",
    "pandas[parquet]>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "tqdm>=4.67.1",
]

[project.scripts]
polimi-scraper = "polimi_scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
